Fixed footer spacing

--- a/src/app/components/footer-nav/footer-item/footer-item.component.css
+++ b/src/app/components/footer-nav/footer-item/footer-item.component.css
@@ -9,10 +9,6 @@ svg {
   margin-bottom: -25%;
 }
 
-.News {
-  margin-top: -1%;
-}
-
 a {
   display: flex;
   flex-direction: column;
@@ -24,10 +20,6 @@ a {
 
 p {
   margin-top: 23%;
-}
-
-#Settings {
-  margin-top: 4%;
 }
 
 .icon {
